// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Client /> should render <Loader /> then new page 1`] = `
.c5 {
  margin: 2rem 0;
  -webkit-animation: eMLfYp 800ms ease-in-out infinite alternate;
  animation: eMLfYp 800ms ease-in-out infinite alternate;
}

.c5:after {
  background: var(--primary);
  border-radius: 50%;
  content: '';
  display: block;
  height: 1rem;
  width: 1rem;
  margin: 0 auto;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 1rem 1.2rem 1.1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  background: var(--yellow);
  color: var(--white);
  font-size: 1.4rem;
  margin: 0 0 var(--gutter);
  padding: 1.5rem;
  position: relative;
  text-align: center;
}

.c1 button {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
}

.c1 + .c0 {
  border-top: 3px solid var(--yellow-darker);
}

.c2 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2:hover {
  border-bottom: 1px solid currentColor;
}

.c4 {
  max-width: var(--container-max-width);
  padding: 0 2rem;
  margin: 0 auto;
}

@media (min-width:800px) {
  .c4 {
    padding: 0 4rem;
  }
}

<div>
  <div
    class="c0 c1"
    style="opacity: 0;"
  >
    <a
      class="c2"
      href="#"
      role="button"
    >
      Enable notifications to be alerted of new publication
    </a>
    <button
      class="c3"
    >
      <svg
        height="16"
        viewBox="0 0 22 28"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.281 20.656c0 0.391-0.156 0.781-0.438 1.062l-2.125 2.125c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-4.594-4.594-4.594 4.594c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-2.125-2.125c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l4.594-4.594-4.594-4.594c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.594 4.594-4.594c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062s-0.156 0.781-0.438 1.062l-4.594 4.594 4.594 4.594c0.281 0.281 0.438 0.672 0.438 1.062z"
        />
      </svg>
    </button>
  </div>
  <main
    class="c4"
  >
    <div
      class="c5"
    />
  </main>
</div>
`;

exports[`<Client /> should render <Photos /> 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 2rem 0;
  padding: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 2rem 0;
  padding: 0;
}

.c6 {
  width: 100%;
  max-width: 810px;
}

.c8 {
  font-size: 1.2rem;
}

.c9 {
  color: var(--gray-2);
  display: block;
  font-size: 1rem;
  font-style: italic;
  margin: 0.4rem 0 0;
}

.c7 {
  background: var(--gray-4);
  position: relative;
  padding-top: calc(0.666667 * 100%);
  width: 100%;
  margin: 0 0 1rem;
}

.c11 {
  margin: 0 0 8.5rem;
  padding: 0;
  text-align: center;
}

.c11 > li {
  display: inline-block;
  margin: 0 0.5rem;
}

.c12 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 1rem 1.2rem 1.1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: white;
  border: 1px solid var(--gray-1);
  display: inline-block;
  font-family: 'Roboto',Arial,sans-serif;
  width: 4.2rem;
  color: var(--text);
  font-size: 1.6rem;
  font-weight: 700;
  will-change: border-color;
  -webkit-transition: border-color 150ms ease-out;
  transition: border-color 150ms ease-out;
}

.c12:hover {
  border-color: var(--gray-3);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 1rem 1.2rem 1.1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  background: var(--yellow);
  color: var(--white);
  font-size: 1.4rem;
  margin: 0 0 var(--gutter);
  padding: 1.5rem;
  position: relative;
  text-align: center;
}

.c1 button {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
}

.c1 + .c0 {
  border-top: 3px solid var(--yellow-darker);
}

.c2 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2:hover {
  border-bottom: 1px solid currentColor;
}

.c4 {
  max-width: var(--container-max-width);
  padding: 0 2rem;
  margin: 0 auto;
}

@media (min-width:800px) {
  .c5 {
    margin: 8.5rem 0;
    padding: 0 8.5rem;
  }

  .c5 + figure {
    margin-top: 20rem;
  }
}

@media (min-width:800px) {
  .c10 {
    margin: 8.5rem 0;
    padding: 0 8.5rem;
  }

  .c10 + figure {
    margin-top: 20rem;
  }
}

@media (min-width:800px) {
  .c4 {
    padding: 0 4rem;
  }
}

<div>
  <div
    class="c0 c1"
    style="opacity: 0;"
  >
    <a
      class="c2"
      href="#"
      role="button"
    >
      Enable notifications to be alerted of new publication
    </a>
    <button
      class="c3"
    >
      <svg
        height="16"
        viewBox="0 0 22 28"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.281 20.656c0 0.391-0.156 0.781-0.438 1.062l-2.125 2.125c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-4.594-4.594-4.594 4.594c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-2.125-2.125c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l4.594-4.594-4.594-4.594c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.594 4.594-4.594c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062s-0.156 0.781-0.438 1.062l-4.594 4.594 4.594 4.594c0.281 0.281 0.438 0.672 0.438 1.062z"
        />
      </svg>
    </button>
  </div>
  <main
    class="c4"
  >
    <figure
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        />
        <figcaption
          class="c8"
        >
          <span />
          <span
            class="c9"
          >
            Février 2019
          </span>
        </figcaption>
      </div>
    </figure>
    <figure
      class="c10"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        />
        <figcaption
          class="c8"
        >
          <span />
          <span
            class="c9"
          >
            Janvier 2019
          </span>
        </figcaption>
      </div>
    </figure>
    <ul
      class="c11"
    >
      <li>
        <button
          class="c12"
          title="Next page"
        >
          »
        </button>
      </li>
      <li>
        <button
          class="c12"
          title="Last page"
        >
          »»
        </button>
      </li>
    </ul>
  </main>
</div>
`;

exports[`<Client /> should render <Welcome /> 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 1rem 1.2rem 1.1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 3rem;
  margin: 0 0 3rem;
}

.c7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--primary);
}

.c7:hover,
.c7:focus {
  border-bottom: 1px solid var(--primary);
}

.c5 {
  padding: 6rem 0;
}

.c5 > p {
  font-size: 1.8rem;
}

.c1 {
  background: var(--yellow);
  color: var(--white);
  font-size: 1.4rem;
  margin: 0 0 var(--gutter);
  padding: 1.5rem;
  position: relative;
  text-align: center;
}

.c1 button {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
}

.c1 + .c0 {
  border-top: 3px solid var(--yellow-darker);
}

.c2 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2:hover {
  border-bottom: 1px solid currentColor;
}

.c4 {
  max-width: var(--container-max-width);
  padding: 0 2rem;
  margin: 0 auto;
}

@media (min-width:800px) {
  .c4 {
    padding: 0 4rem;
  }
}

<div>
  <div
    class="c0 c1"
    style="opacity: 0;"
  >
    <a
      class="c2"
      href="#"
      role="button"
    >
      Enable notifications to be alerted of new publication
    </a>
    <button
      class="c3"
    >
      <svg
        height="16"
        viewBox="0 0 22 28"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.281 20.656c0 0.391-0.156 0.781-0.438 1.062l-2.125 2.125c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-4.594-4.594-4.594 4.594c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-2.125-2.125c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l4.594-4.594-4.594-4.594c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.594 4.594-4.594c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062s-0.156 0.781-0.438 1.062l-4.594 4.594 4.594 4.594c0.281 0.281 0.438 0.672 0.438 1.062z"
        />
      </svg>
    </button>
  </div>
  <main
    class="c4"
  >
    <div
      class="c5"
    >
      <h1
        class="c6"
      >
        Welcome to your Journal 🎉
      </h1>
      <p>
        Go to your 
        <a
          class="c7"
          href="/admin"
        >
          admin
        </a>
         to publish your first photo
      </p>
    </div>
  </main>
</div>
`;
